Added Login Functionality with JWT Authentication. Also Added Restricted Access to Author API

--- a/BookStore-Api/appsettings.json
+++ b/BookStore-Api/appsettings.json
@@ -9,5 +9,9 @@
       "Microsoft.Hosting.Lifetime": "Information"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "Jwt": {
+    "Key": "s2af15af-1005-sf51100-7s085f-afsfsfg0058f41g8",
+    "Issuer": ""
+  }
 }
